--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,4 +1,6 @@
-*, ::before, ::after {
+*,
+::before,
+::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -25,7 +27,8 @@ button {
   background-color: transparent;
 }
 
-ul, ol {
+ul,
+ol {
   list-style: none;
 }
 
@@ -37,14 +40,19 @@ img {
 }
 
 p {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-weight: 400;
   font-size: 1rem;
   line-height: 1.5;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: 'Poppins', sans-serif;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Poppins", sans-serif;
   font-weight: 600;
 }
 
@@ -69,6 +77,23 @@ h5 {
 }
 
 h6 {
-  font-size: .875rem;
+  font-size: 0.875rem;
 }
 
+.skeleton {
+  --tw-bg-opacity: 1;
+
+  border-radius: var(--rounded-box, 1rem /* 16px */);
+
+  background-color: var(--fallback-b3, oklch(var(--b3) / var(--tw-bg-opacity)));
+
+  
+  animation: skeleton 1.8s ease-in-out infinite;
+
+
+  
+  background-image: linear-gradient(105deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 40%, oklch(1 0 0) 50%, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0));
+  background-size: 200% auto;
+  background-repeat: no-repeat;
+  background-position-x: -50%;
+}
