--- a/src/app/utils.scss
+++ b/src/app/utils.scss
@@ -1,18 +1,27 @@
 $primary-color: #ffffff;
 $secondary-color: #151818;
 
-$text-color: #54595F;
+$text-color: #54595f;
 
 $accent-color: rgb(255, 156, 0);
-$accent-color-variant: rgb(255, 156, 0, .3);
+$accent-color-variant: rgb(255, 156, 0, 0.3);
 
 $blur-color: #ffffff00;
 $blur-size: 20px;
 $border-radius: 20px;
-$border-color: #EDEDED21;
-$basic-shadow: 0 0 10px rgba(0, 0, 0 , .15);
+$border-color: #ededed21;
+$basic-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
 
 $logo-height: 4rem;
 $main-top-padding: calc($logo-height + 2.5rem);
 $website-padding: 5vw;
 
+@keyframes skeleton {
+    from {
+        background-position: 150%;
+    }
+
+    to {
+        background-position: -50%;
+    }
+}
