refine PokemonCard component styling and start PokemonCategories component

--- a/src/app/utils.scss
+++ b/src/app/utils.scss
@@ -1,6 +1,9 @@
 $primary-color: #ffffff;
 $secondary-color: #151818;
 
+$primary-color: #151818;
+$secondary-color: #ffffff;
+
 $text-color: #54595f;
 
 $accent-color: rgb(255, 156, 0);
