--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -1,7 +1,8 @@
 .btn {
     padding: 10px 20px;
+    display: inline-flex;
     border-radius: $border-radius;
-    background-color: $e-global-color-4476459;
+    background-color: $secondary-color;
     color: $primary-color;
     transition: transform .3s ease-in-out;
 
