--- a/src/components/ui/Card/Card.module.scss
+++ b/src/components/ui/Card/Card.module.scss
@@ -5,10 +5,13 @@
 }
 
 
-$after-size: 500px;
+$after-size: 400px;
 
 .card { 
+    display: grid;
+    place-items: center;
     position: relative;
+    padding: 1.5px;
     border-radius: $border-radius;
     transition: transform 1s cubic-bezier(.03,.98,.52,.99);
     
@@ -25,17 +28,23 @@ $after-size: 500px;
     }
     
     &::after{
-        background: radial-gradient($after-size circle at var(--data-light-x, 50%) var(--data-light-y, 50%), $secondary-color, transparent 70%);
+        background: radial-gradient($after-size circle at var(--data-light-x, 50%) var(--data-light-y, 50%), 
+            color-mix(in lab, #151515 15%, var(--_after-color, currentColor)), 
+            transparent 70%
+        );
         z-index: -1;
     }
     &::before{
-        background: radial-gradient($after-size / 2 circle at var(--data-light-x, 50%) var(--data-light-y, 50%), rgb(255,255,255, .5), transparent 70%);
+        background: radial-gradient($after-size / 2 circle at var(--data-light-x, 50%) var(--data-light-y, 50%), 
+            rgb(255,255,255, .5), 
+            transparent 70%
+        );
         z-index: 1;
     }
 
     & > * {
         position: relative;
-        margin: 1.5px;
+        width: calc(100% - 1.5px);
         overflow: hidden;
         outline: none;
     }
