--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,6 +1,4 @@
-*,
-::before,
-::after {
+*, ::before, ::after {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
@@ -27,14 +25,13 @@ button {
   background-color: transparent;
 }
 
-ul,
-ol {
+ul, ol {
   list-style: none;
 }
 
 img {
   max-width: 100%;
-  height: auto;
+  object-fit: contain;
   display: block;
   font-style: italic;
 }
@@ -46,12 +43,7 @@ p {
   line-height: 1.5;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
+h1, h2, h3, h4, h5, h6 {
   font-family: "Poppins", sans-serif;
   font-weight: 600;
 }
@@ -81,19 +73,17 @@ h6 {
 }
 
 .skeleton {
-  --tw-bg-opacity: 1;
-
-  border-radius: var(--rounded-box, 1rem /* 16px */);
-
-  background-color: var(--fallback-b3, oklch(var(--b3) / var(--tw-bg-opacity)));
-
-  
-  animation: skeleton 1.8s ease-in-out infinite;
-
-
-  
+  will-change: background-position;
+  border-radius: $border-radius;  
   background-image: linear-gradient(105deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 40%, oklch(1 0 0) 50%, rgba(0, 0, 0, 0) 60%, rgba(0, 0, 0, 0));
-  background-size: 200% auto;
   background-repeat: no-repeat;
+  background-size: 200% auto;
   background-position-x: -50%;
+
+  animation: skeleton 1.5s ease-in-out infinite;
+}
+
+main {
+  padding: 0 5vw;
+  background-color: $primary-color;
 }
