Done search pokemon feature

--- a/src/app/utils.scss
+++ b/src/app/utils.scss
@@ -1,8 +1,8 @@
-$primary-color: #ffffff;
-$secondary-color: #151818;
-
 $primary-color: #151818;
+$primary-color-variant: #050505;
+
 $secondary-color: #ffffff;
+$secondary-color-variant: #f1f1f1;
 
 $text-color: #54595f;
 
