--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -1,9 +1,9 @@
 .btn {
-    padding: 10px 20px;
+    padding: .75rem 1.5rem;
     display: inline-flex;
-    border-radius: $border-radius;
-    background-color: $secondary-color;
-    color: $primary-color;
+    border-radius: $border-radius / 2;
+    background-color: $primary-color-variant;
+    color: $secondary-color;
     transition: transform .3s ease-in-out;
 
 
