--- a/src/app/utils.scss
+++ b/src/app/utils.scss
@@ -1,13 +1,10 @@
-$primary-color: #151818;
-$primary-color-variant: #101010;
+$secondary-color: #151818;
+$secondary-color-variant: #101010;
 
-$secondary-color: #ffffff;
-$secondary-color-variant: #f1f1f1;
+$primary-color: #ffffff;
+$primary-color-variant: #eee;
 
-$text-color: #54595f;
-
-$accent-color: rgb(255, 156, 0);
-$accent-color-variant: rgb(255, 156, 0, 0.3);
+$accent-color: #F86868;
 
 $blur-color: #00000060;
 $blur-size: 20px;
