Update Modal styling

--- a/src/components/customs/Header/Header.module.scss
+++ b/src/components/customs/Header/Header.module.scss
@@ -5,7 +5,7 @@ $header-padding-y: .5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-
+    top: 0;
     background-color: $accent-color;
     padding: $header-padding-y 1rem;
     height: $header-height;
