--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -13,6 +13,30 @@ body {
   color: $secondary-color
 }
 
+body.noScroll {
+  overflow-y: hidden;
+  padding-right: 15px;
+}
+
+@media screen and (pointer: coarse) {
+  body.noScroll {
+    overflow-y: auto;
+    padding-right: 0;
+  }
+}
+
+
+::-webkit-scrollbar {
+  border-radius: 100vmax;
+  width: 15px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: $accent-color;
+  border-radius: 100vmax;
+}
+
+
 a {
   color: inherit;
   text-decoration: none;
@@ -89,5 +113,4 @@ h4 {
   background-position-x: -50%;
   animation: skeleton 1.5s ease-in-out infinite;
 }
-
 
