--- a/src/components/ui/Modal/Modal.module.scss
+++ b/src/components/ui/Modal/Modal.module.scss
@@ -1,15 +1,11 @@
 .filters {
     position: fixed;
-    right: 0;
-    height: 100vh;
-    width: 100%;
-    max-width: 100vw;
-    top: 0;
+    inset: 0;
     display: grid;
-    align-items: center;
-    justify-content: flex-end;
-    transition: transform .3s ease-in-out;
-    z-index: 1000;
+    align-items: flex-end;
+    justify-content: center;
+    transition: opacity .5s cubic-bezier(.03,.98,.52,.99);
+    z-index: -1000;
 
 
     .overlay {
@@ -20,52 +16,45 @@
     }
 
     .container {
-        background-color: $blur-color;
-        position: relative;
-        backdrop-filter: blur($blur-size);
-        width: clamp(120px, 65vw, 350px);
-        min-width: fit-content;
-        height: 80%;
-        padding: 1rem;
-        border-radius: $border-radius 0 0 $border-radius;
-        transition: 
-            transform .3s .3s cubic-bezier(0.25, 0.46, 0.45, 0.94), 
-            opacity .3s .3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        transform-origin: right;
-        overflow-x: visible;
-
-        .burger {
-            position: absolute;
-            top: 0;
-            left: 0;
-            width: 1.5rem;
-            transform: translate(-25%, -25%);
-            background-color: $primary-color-variant;
-            border: 1px solid $secondary-color-variant;
-            z-index: 1000
-        }
+        width: 100vw;
+        border-top-left-radius: $border-radius;
+        border-top-right-radius: $border-radius;
+        box-shadow: 0 0 10000px 10px $primary-color-variant;
+        border-top: 2px solid $accent-color;
+        background-color: $primary-color;
+        overflow: hidden;      
+        
+        
         .inner {
-            overflow: hidden;
-            height: 100%;
+            width: 100%;
+            padding: 1rem 2rem ;
             overflow-y: auto;
+            max-height: 35vh;
+
+
+            &::-webkit-scrollbar {
+                width: 5px;
+            }
         }
     }
 
 
     &.closed {
-        transform: translateX(100%);
+        opacity: 0;
 
         & > .container {
-            transform: scaleX(0);
+            transform: scaleY(0);
             opacity: 0;
         }
     }
 
     &.opened {
-        transform: translateX(0);
+        z-index: 100000;
+
+        opacity: 1;
 
         & > .container {
-            transform: scaleX(1);
+            transform: scaleY(1);
             opacity: 1;
         }
     }
