--- a/src/components/customs/Pokemons/PokemonWrapper/PokemonWrapper.module.scss
+++ b/src/components/customs/Pokemons/PokemonWrapper/PokemonWrapper.module.scss
@@ -1,6 +1,7 @@
 .pokemonWrapper {
     display: grid;
     gap: 1rem;
+    padding: 1rem;
     grid-template-columns: repeat(2, 1fr);
 
     @media screen and (min-width: 700px) {
