Done feature form and change some style

--- a/src/app/utils.scss
+++ b/src/app/utils.scss
@@ -10,8 +10,8 @@ $blur-color: #00000060;
 $blur-size: 20px;
 
 $border-radius: 30px;
-$border-color: #ededed21;
 $basic-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+$header-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.25);
 
 $logo-height: 4rem;
 $main-top-padding: calc($logo-height + 2.5rem);
