--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -37,9 +37,8 @@ body.noScroll {
 }
 
 main {
-  min-height: 95vh;
+  min-height: 90vh;
 }
-
 
 a {
   color: inherit;
@@ -76,30 +75,30 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: 600;
 }
 
-h1 {
+h1, .h1 {
   font-size: 2rem;
 }
-h2 {
+h2, .h2 {
   font-size: 1.5rem;
 }
-h3 {
+h3, .h3 {
   font-size: .85rem;
 }
-h4 {
+h4, .h4 {
   font-size: .75rem;
 }
 
 @media screen and (min-width: 700px) {
-  h1 {
+  h1, .h1 {
     font-size: 3rem;
   }
-  h2 {
+  h2, .h2 {
     font-size: 2rem;
   }
-  h3 {
+  h3, .h3 {
     font-size: 1.25rem;
   }
-  h4 {
+  h4, .h4 {
     font-size: 1rem;
   }
 }
