--- a/src/components/customs/Pokemons/PokemonFilters/PokemonFilters.module.scss
+++ b/src/components/customs/Pokemons/PokemonFilters/PokemonFilters.module.scss
@@ -25,7 +25,7 @@ $gap: 1rem;
         position: absolute;
         left: 0;
         right: 0;
-        box-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.25);
+        box-shadow: $header-shadow;
         top: 50%;
         z-index: -1;
         background-color: $primary-color;
