Done feature/colorSwich, now Start ThemeSwich

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -4,6 +4,27 @@
   margin: 0;
 }
 
+:root {
+  --primary-color: $primary-color;
+  --primary-color-variant: $primary-color-variant;
+
+  --secondary-color: $secondary-color;
+  --secondary-color-variant: $secondary-color-variant;
+
+  --accent-color: $accent-color;
+
+  --blur-color: $blur-color;
+  --blur-size: $blur-size;
+
+  --border-radius: $border-radius;
+  --basic-shadow: $basic-shadow;
+  --header-shadow: $header-shadow;
+
+  --logo-height: $logo-height;
+  --main-top-padding: calc($logo-height + 2.5rem);
+  --website-padding: $website-padding;
+}
+
 html {
   scroll-behavior: smooth;
 }
