--- a/src/components/ui/Select/Select.module.scss
+++ b/src/components/ui/Select/Select.module.scss
@@ -2,15 +2,14 @@
     appearance: none;
     border: 0;
     cursor: pointer; 
-
     
-    background-color: $primary-color-variant;
+    background-color: var(--primary-color-variant ,primary-color-variant);
     min-height: 100%;
-    color: $secondary-color;
+    color: var(--secondary-color, $secondary-color);
     
     padding: 1rem;
     border-radius: $border-radius / 2;
-    box-shadow: $basic-shadow;
+    box-shadow: var(--basic-shadow, $basic-shadow);
     outline: 1px solid transparent;
 
     transition: 
@@ -20,7 +19,7 @@
 }
 
 .select:is(:focus-within) {
-    background-color: $primary-color;
+    background-color: var(--primary-color ,primary-color);
     outline-color: $accent-color;
 }
 
