--- a/src/app/utils.scss
+++ b/src/app/utils.scss
@@ -1,21 +1,25 @@
+$primary-color: #ffffff;
+$primary-color-variant: #eee;
 $secondary-color: #151818;
 $secondary-color-variant: #101010;
 
-$primary-color: #ffffff;
-$primary-color-variant: #eee;
-
 $accent-color: #F86868;
-
 $blur-color: #00000060;
 $blur-size: 20px;
 
+
 $border-radius: 30px;
-$basic-shadow: 0 0 10px rgba(0, 0, 0, 0.15);
+$basic-shadow: 0 0 10px rgb(255, 255, 255, .05);
 $header-shadow: 0 0 10px 10px rgba(0, 0, 0, 0.25);
 
-$logo-height: 4rem;
-$main-top-padding: calc($logo-height + 2.5rem);
+
+$header-height: 6.5rem;
+$header-padding-y: 1rem;
+
+$main-top-padding: $header-height;
 $website-padding: 5vw;
+
+
 
 @keyframes skeleton {
     from {
