--- a/src/components/customs/Header/Header.module.scss
+++ b/src/components/customs/Header/Header.module.scss
@@ -1,6 +1,3 @@
-$header-height: 5.5rem;
-$header-padding-y: 1rem;
-
 .header {
     display: flex;
     justify-content: space-between;
@@ -10,7 +7,7 @@ $header-padding-y: 1rem;
     padding: $header-padding-y 1rem;
     height: $header-height;
     color: $primary-color;
-    box-shadow: $header-shadow;
+    box-shadow: var(--header-shadow, $header-shadow);
 
     & > * {
         height: 100%;
@@ -21,6 +18,20 @@ $header-padding-y: 1rem;
         display: flex;
         justify-content: flex-start;
         align-items: center;
+    }
+
+    .themeContainer {
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+
+        .themeButton {
+
+            svg {
+                fill: currentColor;
+                height: ($header-height - $header-padding-y * 2) * .5;
+            }
+        }
     }
     
     .burgerButton {
