--- a/src/components/customs/Pokemons/PokemonFilters/PokemonFilters.module.scss
+++ b/src/components/customs/Pokemons/PokemonFilters/PokemonFilters.module.scss
@@ -17,7 +17,7 @@ $gap: 1rem;
         inset: 0;
         width: 100%;
         height: 50%;
-        background-color: $accent-color;
+        background-color: var(--accent-color, $accent-color);
     }
 
     &::before {
@@ -25,10 +25,10 @@ $gap: 1rem;
         position: absolute;
         left: 0;
         right: 0;
-        box-shadow: $header-shadow;
+        box-shadow: var(--header-shadow, $header-shadow);
         top: 50%;
         z-index: -1;
-        background-color: $primary-color;
+        background-color: var(--primary-color, $primary-color);
     }
 
     .container {
@@ -48,7 +48,7 @@ $gap: 1rem;
     
             svg {
                 height: 100%;
-                stroke: $secondary-color;
+                stroke: var(--secondary-color, $secondary-color);
             }
         }
     }
