--- a/src/components/customs/Pokemons/PokemonWrapper/PokemonPagination/PokemonPagination.module.scss
+++ b/src/components/customs/Pokemons/PokemonWrapper/PokemonPagination/PokemonPagination.module.scss
@@ -9,20 +9,22 @@
         flex-wrap: wrap;
 
         .btn {
-            aspect-ratio: 1;
             display: flex;
-            padding: 1rem;
+            justify-content: center;
+            align-items: center;
+            padding: .75rem;
+            border-radius: 10px;
             
             &.firstOrLast {
                 // filter: brightness(.85);
-                // background-color: $secondary-color;
+                // background-color: var(--secondary-color, $secondary-color)
                 // color: $primary-color;
             }
 
             &.active {
                 filter: brightness(1);
-                background-color: $accent-color;
-                color: $primary-color;
+                background-color: var(--accent-color, $accent-color);
+                color: var(--primary-color, $primary-color);
             }
         }
     }
