--- a/src/components/ui/CheckBox/CheckBox.module.scss
+++ b/src/components/ui/CheckBox/CheckBox.module.scss
@@ -6,8 +6,8 @@
     aspect-ratio: 1;
     padding: 0.15rem; 
 
-    background-color: $primary-color-variant;
-    box-shadow: $basic-shadow;
+    background-color: var(--primary-color, $primary-color);
+    box-shadow: var(--basic-shadow, $basic-shadow);
     border-radius: 5px;
 }
 
@@ -16,8 +16,7 @@
     position: absolute;
     inset: 3px;
     clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
-    background-color: $accent-color;
-    
+    background-color: var(--accent-color, $accent-color);
     transform: scale(0);
     transition: .3s transform ease-in-out;
 }
@@ -27,8 +26,6 @@
 }
 
 .checkBox:disabled {
-    --form-control-color: #959495;
-
-    color: var(--form-control-disabled);
+    color: #959495;
     cursor: not-allowed;
 }
