--- a/src/components/ui/GroupForm/GroupForm.module.scss
+++ b/src/components/ui/GroupForm/GroupForm.module.scss
@@ -6,13 +6,13 @@
 }
 
 .label > :is(input, textarea) {
-    background-color: $primary-color-variant;
+    background-color: var(--primary-color-variant, $primary-color-variant);
     min-height: 100%;
-    color: $secondary-color;
+    color: var(--secondary-color, $secondary-color);
     border: 0;
     padding: 1rem;
     border-radius: $border-radius / 2;
-    box-shadow: $basic-shadow;
+    box-shadow: var(--basic-shadow, $basic-shadow);
     resize: none;
     outline: 1px solid transparent;
     transition: 
@@ -21,6 +21,6 @@
 }
 
 .label > :is(input, textarea):is(:focus-within) {
-    background-color: $primary-color;
+    background-color: var(--primary-color, $primary-color);
     outline-color: $accent-color;
 }
