--- a/src/components/ui/Input/Input.module.scss
+++ b/src/components/ui/Input/Input.module.scss
@@ -1,11 +1,11 @@
 .input {
-    background-color: $primary-color-variant;
+    background-color: var(--primary-color-variant, $primary-color-variant);
     min-height: 100%;
-    color: $secondary-color;
+    color: var(--secondary-color, $secondary-color);
     border: 0;
     padding: 1rem;
     border-radius: $border-radius / 2;
-    box-shadow: $basic-shadow;
+    box-shadow: var(--basic-shadow, $basic-shadow);
     resize: none;
     outline: 1px solid transparent;
     transition: 
@@ -14,6 +14,6 @@
 }
 
 .input:is(:focus-within) {
-    background-color: $primary-color;
+    background-color: var(--primary-color, $primary-color);
     outline-color: $accent-color;
 }
