--- a/src/components/customs/Pokemons/PokemonWrapper/PokemonWrapper.module.scss
+++ b/src/components/customs/Pokemons/PokemonWrapper/PokemonWrapper.module.scss
@@ -2,12 +2,15 @@
     display: grid;
     gap: 1rem;
     padding: 1rem;
-    grid-template-columns: repeat(2, 1fr);
 
-    @media screen and (min-width: 700px) {
-        & {
-            grid-template-columns: repeat(auto-fill, minmax(min(275px, 100%), 1fr));
-            gap: 1.5rem;
+    &:not(.list) {
+        grid-template-columns: repeat(2, 1fr);
+    
+        @media screen and (min-width: 700px) {
+            & {
+                grid-template-columns: repeat(auto-fill, minmax(min(275px, 100%), 1fr));
+                gap: 1.5rem;
+            }
         }
     }
 }
