--- a/src/app/(auth)/_components/AuthForm/AuthForm.module.scss
+++ b/src/app/(auth)/_components/AuthForm/AuthForm.module.scss
@@ -10,4 +10,13 @@
     .title {
         text-align: center;
     }
+
+    p {
+        text-align: center;
+        color: var(--primary-color, $primary-color);
+
+        a {
+            text-decoration: underline;
+        }
+    }
 }
