--- a/src/app/(customer)/pokemons/[name]/page.module.scss
+++ b/src/app/(customer)/pokemons/[name]/page.module.scss
@@ -3,7 +3,7 @@ $image-height: 25rem;
 $gap: 1.5rem;
 
 .main {
-    background-color: var(--accent-color);
+    background-color: var(--accent-color, $accent-color);
     padding: 0 .5rem .5rem .5rem;
     padding-top: $image-height / 2;
     
@@ -11,7 +11,7 @@ $gap: 1.5rem;
     .container {
         display: grid;
         gap: $gap;
-        background-color: var(--primary-color);
+        background-color: var(--primary-color, $primary-color);
         border-radius: $border-radius;
         padding: ($image-height / 2 + $gap) 1rem 1rem 1rem;
         position: relative;
