--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -34,6 +34,15 @@ body {
   color: var(--secondary-color, $secondary-color);
 }
 
+.fullScreenCenter {
+  min-height: 100vh;
+  display: grid;
+  place-items: center;
+}
+.fullScreenCenter > * {
+  width: 100%;
+}
+
 body.noScroll {
   overflow-y: hidden;
   padding-right: 15px;
