--- a/src/app/(customer)/pokemons/[name]/page.module.scss
+++ b/src/app/(customer)/pokemons/[name]/page.module.scss
@@ -6,6 +6,7 @@ $gap: 1.5rem;
     background-color: var(--accent-color, $accent-color);
     padding: 0 .5rem .5rem .5rem;
     padding-top: $image-height / 2;
+    min-height: auto;
     
 
     .container {
@@ -28,6 +29,12 @@ $gap: 1.5rem;
             display: grid;
             place-items: center;
             transform: translateY(-50%) translateX(-50%);
+        }
+
+        .centered {
+            display: grid;
+            gap: 1rem;
+            place-items: center;
         }
     }
 
