--- a/src/app/_utils.scss
+++ b/src/app/_utils.scss
@@ -30,3 +30,27 @@ $website-padding: 5vw;
         background-position: -50%;
     }
 }
+
+.underlineAnim {
+    position: relative;
+    display: inline-block;
+    padding-bottom: 2px;
+
+    &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 2px;
+        background-color: currentColor;
+        left: 0;
+        bottom: 0;
+        transform: scaleX(0);
+        transform-origin: right;
+        transition: transform .3s ease-in-out;
+    }
+
+    &:is(:hover, :focus-within)::after {
+        transform-origin: left;
+        transform: scaleX(1);
+    }
+}
