--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -156,3 +156,8 @@ h5, .h5 {
   animation: skeleton 1.5s ease-in-out infinite;
 }
 
+.centered-page-content {
+  display: grid;
+  place-items: center;
+  padding: 5rem .5rem;
+}
