--- a/src/components/customs/Pokedex/Pokemons/PokemonForm/PokemonForm.module.scss
+++ b/src/components/customs/Pokedex/Pokemons/PokemonForm/PokemonForm.module.scss
@@ -1,7 +1,7 @@
-.form {
+.container {
     padding: 2rem 2.5vw;
     background-color: var(--accent-color, $accent-color);
-    width: clamp(min(300px, 100%), 50%, 600px);
+    width: clamp(min(300px, 100%), 50%, 1100px);
     border-radius: $border-radius;
     box-shadow: var(--basic-shadow, $basic-shadow);
     border: 1px solid var(--primary-color, $primary-color);
