--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -1,6 +1,7 @@
 .btn {
     padding: .75rem 1.5rem;
     display: inline-flex;
+    line-height: 1.5;
     justify-content: center;
     border-radius: $border-radius / 2;
     background-color: var(--primary-color-variant, $primary-color-variant);
