--- a/src/components/ui/Button/Button.module.scss
+++ b/src/components/ui/Button/Button.module.scss
@@ -19,5 +19,10 @@
     &.active {
         background-color: var(--accent-color, $accent-color);
     }
+
+    &[disabled] {
+        filter: brightness(.5);
+        cursor: not-allowed;
+    }
 }
 
