--- a/src/app/(customer)/trainers/[username]/page.module.scss
+++ b/src/app/(customer)/trainers/[username]/page.module.scss
@@ -68,10 +68,9 @@
             flex-direction: column;
             gap: 1.5rem;
             padding: 1rem;
-            width: max-content;
-            height: max-content;
             border-radius: $border-radius;
             z-index: 10;
+            width: 100%;
 
             section {
                 display: flex;
