--- a/src/app/(admin)/admin/[name]/page.module.scss
+++ b/src/app/(admin)/admin/[name]/page.module.scss
@@ -7,7 +7,8 @@ $gap: 1.5rem;
     padding: 0 .5rem .5rem .5rem;
 
     .banner {
-        padding-bottom: $image-height / 2 + 1rem;
+        padding-top: .5rem;
+        padding-bottom: $image-height / 2;
         display: flex;
         flex-direction: column;
         gap: .5rem;
