--- a/src/app/(customer)/pokemons/[name]/page.module.scss
+++ b/src/app/(customer)/pokemons/[name]/page.module.scss
@@ -9,7 +9,8 @@ $gap: 1.5rem;
 
 
     .banner {
-        padding-bottom: $image-height / 2 + 1rem;
+        padding-top: .5rem;
+        padding-bottom: $image-height / 2;
         display: flex;
         flex-direction: column;
         gap: .5rem;
