--- a/src/app/(customer)/trainers/[username]/edit/page.module.scss
+++ b/src/app/(customer)/trainers/[username]/edit/page.module.scss
@@ -3,5 +3,5 @@
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    padding: 0 .5rem .5rem .5rem;
+    padding: .5rem;
 }
