--- a/src/components/customs/Footer/Footer.module.scss
+++ b/src/components/customs/Footer/Footer.module.scss
@@ -11,7 +11,7 @@
             grid-template-columns: repeat(2, 1fr);
 
             .centered {
-                width: fit-content;
+                width: max-content;
                 max-width: 100%;
                 margin: 0 auto;
             }
@@ -25,7 +25,7 @@
         @media screen and (min-width: 850px) {
             grid-template-columns: repeat(3, 1fr);
 
-           .logoContainer {
+            .logoContainer {
                 grid-column: 1;
             }
         }
